# smart-home-controller

./: .gitconfig  GEMINI.md  pyproject.toml
src/smart_home_controller/: main.py
tests/: test_server.py
