[project]
name = "smart-home-controller"
version = "0.1.0"
description = "OPC UA server for a smart home controller"
requires-python = ">=3.9"
dependencies = [
    "asyncua",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
smart-home-controller = "smart_home_controller.main:run_server"
